Fixed empty folder issues
- Also removed images, pls don't look at them lmao
- Added placeholders to all folders that would need them

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -85,13 +85,13 @@ header {
 
             h2 {
                 margin: 0;
-                font-size: $font-size-normal;
+                font-size: $font-size-large;
                 font-weight: 100;
             }
             p {
                 margin-top: .7em;
                 max-width: 60%;
-                font-size: $font-size-small;
+                font-size: $font-size-normal;
                 font-family: $font-secondary;
                 font-weight: 200;
             }
